# AzureKeyVaultManagedHSMEngine

./: .gitignore  AZURE-DEPLOYMENT-GUIDE.md  PQC_STRATEGY.md  README.md  SUPPORT.md  azure-pipelines.yml  roxy.sh  vanilla.sh
.github/: copilot-instructions.md
.github/instructions/: rust-provider.instructions.md  shell-scripts.instructions.md
.github/prompts/: README.md  build-provider.prompt.md  diagnose-provider-load.prompt.md  test-nginx.prompt.md  test-tonic-mtls.prompt.md
deploy-keyvault/: README.md  deploy_keyvault_infra.ipynb  requirements.txt
deploy-keyvault/infra/: main.bicep
deprecated/: README.md
linuxvm-build-agent/: README.md  buildagent.kv.bicep  buildagent.main.bicep  buildagent.main.json  buildagent.parameters.json  buildagent.vm.bicep  buildagent.vmscript.bicep  buildagent.vnet.bicep  buildagent1.parameters.json  buildagent2.parameters.json  startbuild.sh
samples/grpc-linux/: CMakeLists.txt  README.md  chain.pem  contoso_ecc_cert.cer  ec_client.sh  ec_server.sh  ecleaf.keyid  greeter_client.cpp  greeter_server.cpp  helloworld.proto  leaf.keyid  root.pem  rsa_client.sh  rsa_server.sh
samples/grpc-windows/: greeter_client.vcxproj  greeter_server.vcxproj  start-client.bat  start-server.bat  winbuild.cmd
samples/nginx/: azurefd-test.net.crt  default  nginx.conf  readme.md
samples/nginx-managedHsm/: default  openssl.cnf  readme.md
samples/openssl/: UseAzureCliCredential.md  (+3 more)
src/: CMakeLists.txt  base64.c  base64.h  base64lib.c  base64lib.h  ctrl.c  curl.c  dllmain.c  e_akv.vcxproj  e_akv_err.c  e_akv_err.h  ec.c  key.c  log.c  pch.c  pch.h  rsa.c  vcpkg.json  winbuild.bat
src_provider/: .gitignore  BUILD.md  CMakeLists.txt  PR_DESCRIPTION.md  akv_cipher.c  akv_cipher_aes.c  akv_keymgmt.c  akv_keymgmt_aes.c  akv_logging.c  akv_provider.c  akv_provider.vcxproj  akv_provider_internal.h  akv_provider_shared.h  akv_signature.c  base64.c  build_with_vsdev.bat  curl.c  dev_wrap_unwrap_plan.md  runtest.bat  runtest.ps1  setup_managed_hsm.bat  test_csr.ps1  test_selfsign.ps1  testplan.md  validate_hsm.bat  vcpkg-configuration.json  vcpkg.json  winbuild.bat
src_provider/.github/: copilot-instructions.md
src_provider_rust/: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGES-SUMMARY.md  Cargo.toml  DOCKER-KEYVAULT-TESTING.md  DOCKER.md  Dockerfile  Dockerfile.nginx-keyvault  Dockerfile.test  INSTALL.md  PROGRESS.md  QUICKSTART.md  README.md  SESSION_4_KEYMGMT_BREAKTHROUGH.md  bootstrap_openssl.bat  bootstrap_openssl.ps1  build.rs  check_sizeof.c  docker-compose.yml  docker-test.sh  fix_dispatch.ps1  get_modules_dir.ps1  runtest.bat  runtest.sh  testOpenssl.cnf  test_keyvault.sh  ubuntubuild.sh  winbuild.bat
src_provider_rust/.cargo/: config.toml
src_provider_rust/.github/: copilot-instructions.md
src_provider_rust/grpc-example/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  generate-certs.sh  grpc-mtls-sidecar.md  openssl-provider.cnf.template  run-client.sh  sidecar-design-deep-dive.md  start-demo.sh  stop-demo.sh
src_provider_rust/grpc-example-tonic-mtls/: .env.ec.example  .env.example  .env.rsa.example  .gitignore  Cargo.toml  README.md  generate-certs.ps1  generate-certs.sh  openssl-provider.cnf.template  run-client.ps1  run-client.sh  start-server.ps1  start-server.sh
src_provider_rust/grpc-example-tonic-mtls/proto/: greeter.proto
src_provider_rust/grpc-example-tonic-mtls/src/: client.rs  hsm_key.rs  server.rs  tls.rs
src_provider_rust/grpc-example/nginx/: nginx-client.conf  nginx-server.conf
src_provider_rust/grpc-example/proto/: greeter.proto
src_provider_rust/grpc-example/src/: client.rs  server.rs
src_provider_rust/nginx-example/: .env.example  .gitattributes  .gitignore  README.md  check-openssl.sh  cleanup.sh  generate-cert.sh  nginx.conf  nginx.conf.template  openssl-provider.cnf  openssl-provider.cnf.template  run-all.sh  setup-env.sh  start-server.sh  stop-server.sh  test-client.sh  test-results.md
src_provider_rust/nginx-example/.github/prompts/: test-nginx-keyless-tls.prompt.md
src_provider_rust/nginx-keyvault/: .env.example  README.md  cleanup.sh  generate-cert.sh  nginx.conf.template  openssl-provider.cnf.template  setup-env.sh  start-server.sh  stop-server.sh  test-client.sh
src_provider_rust/src/: auth.rs  base64.rs  cipher.rs  dispatch.rs  http_client.rs  keymgmt.rs  lib.rs  logging.rs  openssl_ffi.rs  openssl_helpers.rs  ossl_param.rs  provider.rs  signature.rs  store.rs  tests_negative.rs
(+2 files in other folders)
