[package]
name = "akv_provider"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft Corporation"]
description = "OpenSSL Provider for Azure Managed HSM - Rust implementation"
license = "MIT"

[lib]
name = "akv_provider"
crate-type = ["cdylib"]

[dependencies]
# OpenSSL bindings for Rust
openssl = "0.10"
openssl-sys = "0.9"

# HTTP client for Azure Key Vault API calls
reqwest = { version = "0.11", features = ["blocking", "json"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding
base64 = "0.21"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# C interop
libc = "0.2"
foreign-types = "0.3"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
